Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33987

QSerialPort::waitForReadyRead() does not work properly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.2.1
    • 4.8.5, 5.1.0
    • Serial Port
    • None
    • Windows 7 64bit
      OSX 10.8.4
    • Ic8d8e3806fd4863c2720ffb83d5c19eae54d57f0

      waitForReadReady(timeout) may return before timeout with TRUE though there is no data available or it may return FALSE though data is available. Applies to USB-to-RS232 converters (FTDI chip), evtl. also to COM1&2, on Windows 7 64bit and MacOSx 10.8.5.
      This is a more general case of https://bugreports.qt-project.org/browse/QTBUG-31918 which is already closed.
      i have attached a test prog with a short howto in siotest.cpp.

        1. SioTest.zip
          6 kB
          Günter Woigk
        2. waittest.zip
          0.9 kB
          Denis Shienkov
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kuzulis Denis Shienkov
            kio Günter Woigk
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes